@@ -22,28 +22,18 @@ public class PollReactionRem extends ComandoGuildReacoes {
     @Override
     public void executa(LinkedList<String> args, Helper.Reacao event) throws IOException, Exception {
         final String tipo = args.getFirst();
-        String titulo = event.getMessage().getEmbeds().get(0).getTitle();
-        args.add('{' + titulo + '}');
-        PollHelper.getPoll(args,event,(titulo1, opcoes, guild, query) -> {
-            if(guild != null){
-                Poll poll = guild.getPoll(titulo);
-                if(!poll.isAberto()){
-                    event.reply("a poll {**" + poll.getTitulo() + "**} foi fechada", message -> message.delete().submitAfter(5, TimeUnit.SECONDS));
-                    return;
-                }
-                int index = Constantes.POOL_EMOTES.indexOf(event.emoji());
-                poll.rem(index, event.getId());
-                if(tipo.contains("poll"))
-                    event.getMessage().editMessage(poll.me()).submit();
-                else if(tipo.contains("pic")){
-                    final var emb = event.getMessage().getEmbeds().get(0);
-                    LinkedList<String> param = Regex.extract("\\d+", emb.getFooter().getText());
-                    int i = Integer.parseInt(param.getFirst());
-                    event.getMessage().editMessage(poll.visualiza(i)).submit();
-                }
-                Memoria.guilds.updateOne(query, new Document("$set",guild.toMongo()));
-                return;
+        PollHelper.getPollFromEmote(args,event, dp -> {
+            dp.poll().rem(dp.index(), event.getId());
+            if(tipo.contains("poll"))
+                event.getMessage().editMessage(dp.poll().me()).submit();
+            else if(tipo.contains("pic")){
+                final var emb = event.getMessage().getEmbeds().get(0);
+                LinkedList<String> param = Regex.extract("\\d+", emb.getFooter().getText());
+                int i = Integer.parseInt(param.getFirst());
+                event.getMessage().editMessage(dp.poll().visualiza(i)).submit();
             }
+            Memoria.guilds.updateOne(dp.query(), new Document("$set",dp.guild().toMongo()));
+            return;
         });
     }
 
